--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,6 +1,6 @@
  <head>
   <title>
-    <%= content_for?(:title) ? yield(:title) : "Kickoff Tailwind" %>
+    <%= content_for?(:title) ? yield(:title) : "MDA Supermarket App" %>
   </title>
 
   <%= csrf_meta_tags %>
